Use collector to get list from stream.